--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
   <div class="containerBox">
     <div style="text-align: left;">
     <div class="newsTitle">
-      <h1 style="text-align: left;">Site Version 1.1.4 </h1>
+      <h1 style="text-align: left;">Site Version 1.1.5 </h1>
     </div>
     <hr class="newsHR">
     <div class="newsDecription">
       <ul>
-        <li style="text-align: left"> Version date: 19/06/2022 </li>
-        <li style="text-align: left; color:gold"> Next update will be in some days</li>
+        <li style="text-align: left"> Version date: 26/06/2022 </li>
+        <li style="text-align: left; color:crimson"> Next update will before server relise</li>
       </ul>
 
       <div class="newsSubTitle">
@@ -54,14 +54,14 @@
       </div>
       <hr class="newsMiniHR">      
       <ul>
-        <li style="text-align: left; opacity: 1;"> Pages names</li>
+        <li style="text-align: left; opacity: 0.3;"> Nothing</li>
       </ul>
       <div class="newsSubTitle">
         Added:
       </div>
       <hr class="newsMiniHR">      
       <ul>
-        <li style="text-align: left; opacity: 0.3;"> Nothing</li>
+        <li style="text-align: left; opacity: 1;"> Downloading client <p style="opacity:0.3; color:gold">(beta without real file)</p></li>
       </ul>
 
       <div class="newsSubTitle">
@@ -69,7 +69,7 @@
       </div>
       <hr class="newsMiniHR">      
       <ul>
-        <li style="text-align: left;"> FAQ </li>
+        <li style="text-align: left; opacity: 0.3;"> Nothing </li>
       </ul>
 
       <div class="newsSubTitle">
@@ -77,7 +77,6 @@
       </div>
       <hr class="newsMiniHR">      
       <ul>
-        <li style="text-align: left;"> Add all elements for intalling client</li>
         <li style="text-align: left;"> Bug fixing</li>
       </ul>
     </div>
