--- a/pages/help.html
+++ b/pages/help.html
@@ -33,11 +33,9 @@
 
   <div class="containerBox">
     <div style="text-align: center;">
-      <h1>Наразі ми доповнюємо цю сторінку...</h1>
-      <h2>Вибачаємося за очікування</h6> 
-      <hr style="width: 600px;">
-      <h2>Можете поки що подивитися на котика</h2>
-      <img style="border-radius:24px" src="https://bestgif.su/_ph/46/2/81396229.gif">
+      <h1>Для завантаження натисніть кнопку знику </h1>
+      <a download="https://gdb.rferl.org/0f1e03b5-c94b-480e-aacf-3e88d73d36a1_w1080_h608.png"> <button class="confirm-button">Завантажити клієнт</button></a>
+      
     </div>
   </div>
 
